[project]
name = "aiowt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fabian.bxr", email = "61473429+fabian-bxr@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
